# JenniWren-Carousel-engine-

./: ARCHITECTURE.md  CHANGELOG.md  DESIGN_RULES.md  README.md  __init__.py  build_carousel.py  carousel_dashboard.py  carousel_dashboard_headline_upgrade.py  carousel_lib.py  carousel_lib_headline_upgrade.py  comparison_templates.py  cover_templates.py  cover_templates_headline_v2.py  data_templates.py  document_templates.py  explainer_templates.py  explainer_templates_headline_v2.py  exporter.py  headline_engine_v2.py  manifest.py  perf.py  production_config.py  pyproject.toml  qa.py  qa_gate.py  registry.py  render_carousel.py  renderer.py  renderer_compat.py  renderer_imports.py  story_loader.py  template_shared.py  templates.py  text_fitting_engine.py  timeline_templates.py  validator.py
