[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jenniwren-renderer"
version = "1.0.0"
description = "JenniWren carousel rendering engine (carousel_lib.py) and the reused registry/qa/renderer building blocks."
requires-python = ">=3.9"
dependencies = [
    "Pillow",
]

[tool.setuptools]
packages = ["jenniwren_renderer"]
